--- a/app/assets/stylesheets/drawer.scss
+++ b/app/assets/stylesheets/drawer.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the drawer controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+#drawTable {
+  border: 1px solid black;
+}
+td {
+  width: 20px;
+  height: 20px;
+  border: 1px solid black;
+}
