--- a/app/views/drawer/draw.html.erb
+++ b/app/views/drawer/draw.html.erb
@@ -1,4 +1,6 @@
-<h1>Drawer#draw</h1>
+<h1>PaintCraft</h1>
+<p>Please select your color on the left and set it to paint the squares<p>
+  
 <table id="drawTable">
     <% @pixels.each do |x| %>
       <tr>
