--- a/app/assets/stylesheets/drawer.scss
+++ b/app/assets/stylesheets/drawer.scss
@@ -2,10 +2,11 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 #drawTable {
-  border: 1px solid black;
+  border: 10px solid #AAAAAA;
 }
 td {
   width: 20px;
   height: 20px;
-  border: 1px solid black;
+  border-right: 1px solid black;
+  border-bottom: 1px solid black;
 }
