--- a/app/assets/stylesheets/drawer.scss
+++ b/app/assets/stylesheets/drawer.scss
@@ -1,6 +1,14 @@
 // Place all the styles related to the drawer controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+@import url(https://fonts.googleapis.com/css?family=Roboto);
+
+body {
+  width:100%;
+  height:100%;
+  font-family: 'Roboto', sans-serif;
+  background-image: url('minecraft-bg-tile.jpg');
+}
 #drawTable {
   border: 10px solid #AAAAAA;
 }
@@ -12,4 +20,55 @@ td {
 }
 .cell.active {
   background-color:red;
+}
+img {
+  vertical-align:middle;
+  width:500px;
+}
+#header {
+  padding-left: calc(50% - 200px);
+  padding-top:20px;
+  vertical-align:middle;
+  width: 100%;
+  background-color: #7eb2e4;
+  height: 150px;
+}
+#content {
+  text-align:center;
+  height:100%;
+  padding:20px;
+  padding-left:60px;
+  padding-right:50px;
+  background-color:#fff;
+  width:480px;
+  margin-left: calc(50% - 240px);
+}
+
+
+// Buttons
+.btn {
+  background: #3498db;
+  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+  background-image: -o-linear-gradient(top, #3498db, #2980b9);
+  background-image: linear-gradient(to bottom, #3498db, #2980b9);
+  -webkit-border-radius: 12;
+  -moz-border-radius: 12;
+  border-radius: 12px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
 }
