--- a/app/views/drawer/draw.html.erb
+++ b/app/views/drawer/draw.html.erb
@@ -41,16 +41,20 @@
     });
   </script>
 <% end %>
-<%= image_tag "paintcraft.png" %>
-<p>Please select your color on the left and set it to paint the squares<p>
-<input type="text" id="colorPicker"/>
-<table id="drawTable">
-    <% (0..16).each do |x|%>
-      <tr>
-        <% (0..16).each do |y| %>
-          <td class="cell" data-x="<%= x %>" data-y="<%= y %>" style="background-color:#<%= @pixels[x,y] %>;"></td>
-        <% end %>
-      </tr>
-    <% end %>
-</table>
-<button> Export to Minecraft! </button>
+<div id="header">
+  <%= image_tag "paintcraft.png" %>
+</div>
+<div id="content">
+  <p>Please select your color on the left and set it to paint the squares<p>
+  <input type="text" id="colorPicker"/>
+  <table id="drawTable">
+      <% (0..16).each do |x|%>
+        <tr>
+          <% (0..16).each do |y| %>
+            <td class="cell" data-x="<%= x %>" data-y="<%= y %>" style="background-color:#<%= @pixels[x,y] %>;"></td>
+          <% end %>
+        </tr>
+      <% end %>
+  </table>
+  <button class="btn"> Export to Minecraft! </button>
+</div>
